interface/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface
  namespace: ocr-service
spec:
  type: ClusterIP
  selector:
    app: interface
  ports:
    - port: 8000
      targetPort: 8000
